tests/golden/type_errors/nullable_narrowing_outside_branch.cd
fun takesNumber(value: number): number { return value; }
let maybe: number? = 1;
if (maybe != nil) {
  print takesNumber(maybe);
}
let value: number = maybe;
